# chatops

./: .editorconfig  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml
examples/: discord_bot_example.py  telegram_poller_example.py
src/chatops_bridge/: __init__.py  discord.py  discord_bot.py  discord_channels.py  telegram.py  telegram_commands.py  telegram_format.py  telegram_poller.py
