[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatops-bridge"
version = "0.1.5"
description = "Reusable Telegram and Discord ChatOps utilities for Python projects"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "ChatOps Bridge Contributors" }
]
keywords = ["telegram", "discord", "webhook", "chatops", "notifications"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Communications :: Chat",
  "Topic :: Software Development :: Libraries"
]
dependencies = [
  "awesome-notify-bridge>=0.1.5"
]

[project.optional-dependencies]
discord-bot = [
  "discord.py>=2.4.0"
]

[project.urls]
Homepage = "https://github.com/trunghvbk-afataw/chatops"
Repository = "https://github.com/trunghvbk-afataw/chatops"
Issues = "https://github.com/trunghvbk-afataw/chatops/issues"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
